gobmkida/c2/does_capture_something
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/does_capture_something/src/engine/board.c:3065:30: error: use of undeclared identifier 'byte_9B389F'
if ( v2 != ( unsigned __int8)byte_9B389F[pos] 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/does_capture_something/src/engine/board.c:3068:30: error: use of undeclared identifier 'byte_9B388C'
if ( v2 != ( unsigned __int8)byte_9B388C[pos] 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/does_capture_something/src/obj/1/board.o] Error 1
